工作流优化，支持空值